--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@ font-size: 34px;
  display:none;
 }
 .logo-swap:hover .navbar-brand-2{
-  display:block;
+ display:block;
 }
 .logo-swap:hover .navbar-brand{
 display:none;
@@ -73,6 +73,48 @@ padding-bottom: 50px;
 }
 .contact-us hr{
   border: .1em solid #222;
+}
+.swap-words{
+	display: inline;
+	text-indent: 10px;
+}
+.swap-words span{
+	position: absolute;
+	opacity: 0;
+	overflow: hidden;
+	width: 100%;
+	color: #222;
+}
+.swap-words span{
+	animation: rotateWordsFirst 18s linear infinite 0s;
+}
+.swap-words span:nth-child(2) {
+	animation-delay: 3s;
+	color: #222;
+}
+.swap-words span:nth-child(3) {
+	animation-delay: 6s;
+	color: #222;
+}
+.swap-words span:nth-child(4) {
+	animation-delay: 9s;
+	color: #222;
+}
+.swap-words span:nth-child(5) {
+	animation-delay: 12s;
+	color: #222;
+}
+.swap-words span:nth-child(6) {
+	animation-delay: 15s;
+	color: #222;
+}
+
+@keyframes rotateWordsFirst {
+    0% { opacity: 1; animation-timing-function: ease-in; height: 0px; }
+    8% { opacity: 1; height: 60px; }
+    19% { opacity: 1; height: 60px; }
+	25% { opacity: 0; height: 60px; }
+    100% { opacity: 0; }
 }
 .contact-us input, label {
     display:block;
