--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,15 +22,35 @@ border:none;
 margin-top:50px;
 margin-bottom:40px !important;
 }
+.navbar-inv{
+background:transparent;
+border:none;
+margin-top:50px;
+margin-bottom:40px !important;
+}
 .navbar a{
-color:#000000 !important;
+color:#ffffff !important;
+letter-spacing: 4px;
+}
+.navbar-inv a{
+color:#222 !important;
+letter-spacing: 4px;
 }
 .navbar-right a{
-  color:#222;
-  font-size: 10px;
-  letter-spacing: .3em;
+  color:#ffffff !important;
+  font-size: 12px !important;
+  letter-spacing: 4px;
   text-transform: uppercase;
   line-height: 1em;
+  font-weight: bold;
+}
+.navbar-right-inv a{
+  color:#222 !important;
+  font-size: 12px !important;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  line-height: 1em;
+  font-weight: bold;
 }
 .navbar-toggle{
   border:none;
@@ -60,9 +80,21 @@ font-size: 34px;
 .logo-swap:hover .navbar-brand{
 display:none;
 }
-
-
-
+.dig-deep{
+  font-family: brandon, sans-serif;
+  color:#ffffff;
+  text-align: center;
+  bottom:108px;
+  right:0;
+  left:0;
+  position: absolute;
+}
+.dig-deep h2{
+  letter-spacing: 4px;
+}
+.dig-deep a{
+  color: #ffffff;
+}
 .contact-us{
 font-family: brandon, sans-serif;
 max-width: 800px;
@@ -176,6 +208,7 @@ padding-bottom: 50px;
   background-color: #EC644B;
   padding-top:50px;
   padding-bottom:50px;
+  border-top: 2px solid #ffffff;
 }
 .create-row h1{
   font-family: adventor, serif;
@@ -241,7 +274,61 @@ padding-bottom: 50px;
 .contact-row h1{
   color:#ffffff;
 }
-/*Custom Scrollbar*/
+
+/*Video BG*/
+
+.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+    height: 575px !important;
+}
+.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}
+.video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
+.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background:rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height:100%;
+}
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+.video-container video.fillWidth {
+    width: 100%;
+}
+
+@media only screen and (max-width : 992px) {
+  .navbar{
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+}
+
+/*Custom Scrollbar
 ::-webkit-scrollbar {
   width: 15px;
 }
@@ -251,3 +338,4 @@ padding-bottom: 50px;
 ::-webkit-scrollbar-thumb {
   background: #EC644B;
 }
+*/
